css class added

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>
+    <div class="firstclass">
     </div>
     <h1>how are you</h1>
     <h1>this is my code first update</h1>
