--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <h1>how are you</h1>
     <h1>this is my code first update</h1>
     <p>this is my first paragraph</p>
+    <h2>this is h2 line</h2>
 </body>
 </html>
