--- a/index.html
+++ b/index.html
@@ -15,5 +15,11 @@
     <p>this is my first paragraph</p>
     <h2>this is h2 line</h2>
     <h3>this is h3 <param name="para" value=""></h3>
+    <h1>how are  u</h1>
+    <h5>this is footer</h5>
+    <footer>
+        <h1>this is footer</h1>
+    <h2>this is footer brach</h2>
+    </footer>
 </body>
 </html>
